Add UA-parsing and validate input

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -19,7 +19,7 @@
     	</div>
     	<script>
     	jQuery(document).ready(function($) {
-    	    $('#terminal').terminal("/yo", {
+    	    $('#terminal').terminal("/sup/commands", {
     	        greetings: "Welcome to browserconsole"
     	    });
     	});
