Clean up imports

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,7 +13,6 @@ div#container
 {
 	width: 100%;
 	height: 100%;
-	position: relative;
 }
 
 div#logo
@@ -28,6 +27,6 @@ div#logo
 div#terminal
 {
 	height: 500px;
-	width: 90%;
-	position: absolute;
+	margin: 0 auto 0;
+	padding: 15px;
 }
