Working POC without auth and without multiple channels

--- a/public/stylesheets/terminal.css
+++ b/public/stylesheets/terminal.css
@@ -59,8 +59,8 @@
     clear: both;
 }
 .terminal a {
-    color: #a54dff;
+    color: #d8b2ff;
 }
 .terminal a:hover {
-    color: #a54dff;
+    color: #d8b2ff;
 }
