--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -7,10 +7,13 @@
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/terminal.css'}">
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Grand+Hotel|Inconsolata:400,700">
+<!--    <link rel="stylesheet" href="http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.css"> -->   
         <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
+<!--    <script src="http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.js" type="text/javascript"></script> -->
         <script src="@{'/public/javascripts/jquery-1.8.3.min.js'}" type="text/javascript" charset="UTF-8"></script>
         <script src="@{'/public/javascripts/jquery.mousewheel-min.js'}" type="text/javascript" charset="UTF-8"></script>
-        <script src="@{'/public/javascripts/jquery.terminal-0.4.22.min.js'}" type="text/javascript" charset="UTF-8"></script>
+        <script src="@{'/public/javascripts/jquery.terminal-0.4.22.js'}" type="text/javascript" charset="UTF-8"></script>
+        <script src="@{'/public/javascripts/browserconsole.js'}" type="text/javascript" charset="UTF-8"></script>
     </head>
     <body>
     	<div id="container">
@@ -18,10 +21,8 @@
 	    	<div id="terminal"></div>
     	</div>
     	<script>
-    	jQuery(document).ready(function($) {
-    	    $('#terminal').terminal("/sup/commands", {
-    	        greetings: "Welcome to browserconsole"
-    	    });
+    	$(document).ready(function() {
+    		Browserconsole.init();
     	});
     	</script>
     </body>
