--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>browserconsole</title>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=8" />
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/terminal.css'}">
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Grand+Hotel|Inconsolata:400,700">
