--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -7,8 +7,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=8" />
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/terminal.css'}">
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Grand+Hotel|Inconsolata:400,700">
-<!--    <link rel="stylesheet" href="http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.css"> -->   
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Grand+Hotel|Inconsolata:400,700">
+<!--    <link rel="stylesheet" href="//google-code-prettify.googlecode.com/svn/trunk/src/prettify.css"> -->   
         <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
 <!--    <script src="http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.js" type="text/javascript"></script> -->
         <script src="@{'/public/javascripts/jquery-1.8.3.min.js'}" type="text/javascript" charset="UTF-8"></script>
