--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,37 +1,32 @@
-body
-{
-	background-color: #333;
-	color: white;
-	font-family: 'Inconsolata', sans-serif;
-	font-size: 12pt;
-	margin: 0;
-	width: 100%;
-	height: 100%;
+body {
+  background-color: #333;
+  color: white;
+  font-family: 'Inconsolata', sans-serif;
+  font-size: 12pt;
+  margin: 0;
+  width: 100%;
+  height: 100%;
 }
 
-div#container
-{
-	width: 100%;
-	height: 100%;
+div#container {
+  width: 100%;
+  height: 100%;
 }
 
-div#logo
-{
-	margin: 0 auto 0;
-	font-size: 120pt;
-	color: white;
-	text-align: center;
-	font-family: 'Grand Hotel', cursive;
+div#logo {
+  margin: 0 auto 0;
+  font-size: 120pt;
+  color: white;
+  text-align: center;
+  font-family: 'Grand Hotel', cursive;
 }
 
-div#terminal
-{
-	height: 500px;
-	margin: 0 auto 0;
-	padding: 15px;
+div#terminal {
+  height: 500px;
+  margin: 0 auto 0;
+  padding: 15px;
 }
 
-.prompt
-{
-	color: #d8b2ff;
+.prompt {
+  color: #d8b2ff;
 }
