Cleanup JavaScript code

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -19,8 +19,8 @@
 	    	<div id="terminal"></div>
     	</div>
     	<script>
-    	$(document).ready(function() {
-    		Browserconsole.init();
+    	$(function() {
+    		bconsole.init();
     	});
     	</script>
     </body>
