--- a/public/stylesheets/terminal.css
+++ b/public/stylesheets/terminal.css
@@ -1,4 +1,16 @@
-.terminal .clipboard {
+/*
+ * This css file is part of jquery terminal
+ *
+ * Licensed under GNU LGPL Version 3 license
+ * Copyright (c) 2011-2013 Jakub Jankiewicz <http://jcubic.pl>
+ *
+ */
+.terminal .terminal-output .format, .cmd .format,
+.cmd .prompt, .cmd .prompt div, .terminal .terminal-output div div {
+  display: inline-block;
+}
+
+.cmd .clipboard {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -13,7 +25,7 @@
 }
 
 .terminal {
-  margin: 10px;
+  padding: 10px;
   position: relative;
   overflow: hidden;
 }
@@ -22,42 +34,115 @@
   padding: 0;
   margin: 0;
   height: 1.3em;
+  /*margin-top: 3px; */
 }
 
-.terminal .terminal-output div div, .terminal .prompt {
+.cmd .cursor.blink {
+  -webkit-animation: blink 1s infinite steps(1, start);
+  -moz-animation: blink 1s infinite steps(1, start);
+  -ms-animation: blink 1s infinite steps(1, start);
+  animation: blink 1s infinite steps(1, start);
+}
+
+@keyframes blink {
+  0%, 100% {
+    background-color: #000;
+    color: #aaa;
+  }
+  50% {
+    background-color: #bbb; /* not #aaa because it's seem there is Google Chrome bug */
+    color: #000;
+  }
+}
+
+@-webkit-keyframes blink {
+  0%, 100% {
+    background-color: #000;
+    color: #aaa;
+  }
+  50% {
+    background-color: #bbb;
+    color: #000;
+  }
+}
+
+@-ms-keyframes blink {
+  0%, 100% {
+    background-color: #000;
+    color: #aaa;
+  }
+  50% {
+    background-color: #bbb;
+    color: #000;
+  }
+}
+
+@-moz-keyframes blink {
+  0%, 100% {
+    background-color: #000;
+    color: #aaa;
+  }
+  50% {
+    background-color: #bbb;
+    color: #000;
+  }
+}
+
+.terminal .terminal-output div div, .cmd .prompt {
   display: block;
-  height: 14px;
+  line-height: 14px;
+  height: auto;
 }
 
-.terminal {
+.cmd .prompt {
+  float: left;
+}
+
+.terminal, .cmd {
+  font-family: FreeMono, monospace;
+  color: #aaa;
+  background-color: #000;
+  font-size: 12px;
+  line-height: 14px;
+}
+
+.terminal-output > div {
+  /*padding-top: 3px;*/
+  min-height: 14px;
 }
 
 .terminal .terminal-output div span {
   display: inline-block;
 }
 
-.terminal .cmd span {
-  display: inline-block;
+.cmd span {
+  float: left;
+  /*display: inline-block; */
 }
 
-.terminal .cmd span.inverted {
-  background-color: white;
-  color: #333;
+.terminal .inverted, .cmd .inverted, .cmd .cursor.blink {
+  background-color: #aaa;
+  color: #000;
 }
 
-.terminal .terminal-output div div::-moz-selection, .terminal .terminal-output div span::-moz-selection {
-  background-color: white;
-  color: #333;
+.terminal .terminal-output div div::-moz-selection,
+.terminal .terminal-output div span::-moz-selection,
+.terminal .terminal-output div div a::-moz-selection {
+  background-color: #aaa;
+  color: #000;
 }
 
-.terminal .terminal-output div div::selection, .terminal .terminal-output div span::selection,
-.terminal .cmd > span::selection, .terminal .prompt span::selection {
-  background-color: white;
-  color: #333;
+.terminal .terminal-output div div::selection,
+.terminal .terminal-output div div a::selection,
+.terminal .terminal-output div span::selection,
+.cmd > span::selection,
+.cmd .prompt span::selection {
+  background-color: #aaa;
+  color: #000;
 }
 
 .terminal .terminal-output div.error, .terminal .terminal-output div.error div {
-  color: #8e3ae4;
+  color: red;
 }
 
 .tilda {
@@ -73,9 +158,9 @@
 }
 
 .terminal a {
-  color: #d8b2ff;
+  color: #0F60FF;
 }
 
 .terminal a:hover {
-  color: #d8b2ff;
+  color: red;
 }
