--- a/public/stylesheets/terminal.css
+++ b/public/stylesheets/terminal.css
@@ -102,7 +102,7 @@
   font-family: FreeMono, monospace;
   color: #aaa;
   background-color: #000;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 14px;
 }
 
@@ -122,14 +122,14 @@
 
 .terminal .inverted, .cmd .inverted, .cmd .cursor.blink {
   background-color: #aaa;
-  color: #000;
+  color: #333;
 }
 
 .terminal .terminal-output div div::-moz-selection,
 .terminal .terminal-output div span::-moz-selection,
 .terminal .terminal-output div div a::-moz-selection {
   background-color: #aaa;
-  color: #000;
+  color: #333;
 }
 
 .terminal .terminal-output div div::selection,
@@ -138,11 +138,11 @@
 .cmd > span::selection,
 .cmd .prompt span::selection {
   background-color: #aaa;
-  color: #000;
+  color: #333;
 }
 
 .terminal .terminal-output div.error, .terminal .terminal-output div.error div {
-  color: red;
+  color: #8e3ae4;
 }
 
 .tilda {
@@ -158,9 +158,9 @@
 }
 
 .terminal a {
-  color: #0F60FF;
+  color: #d8b2ff;
 }
 
 .terminal a:hover {
-  color: red;
+  color: #d8b2ff;
 }
