--- a/public/stylesheets/terminal.css
+++ b/public/stylesheets/terminal.css
@@ -47,10 +47,10 @@
 @keyframes blink {
   0%, 100% {
     background-color: #333;
-    color: #aaa;
+    color: #ccc;
   }
   50% {
-    background-color: #bbb; /* not #aaa because it's seem there is Google Chrome bug */
+    background-color: #bbb; /* not #ccc because it's seem there is Google Chrome bug */
     color: #333;
   }
 }
@@ -58,7 +58,7 @@
 @-webkit-keyframes blink {
   0%, 100% {
     background-color: #333;
-    color: #aaa;
+    color: #ccc;
   }
   50% {
     background-color: #bbb;
@@ -69,7 +69,7 @@
 @-ms-keyframes blink {
   0%, 100% {
     background-color: #333;
-    color: #aaa;
+    color: #ccc;
   }
   50% {
     background-color: #bbb;
@@ -80,7 +80,7 @@
 @-moz-keyframes blink {
   0%, 100% {
     background-color: #333;
-    color: #aaa;
+    color: #ccc;
   }
   50% {
     background-color: #bbb;
@@ -100,7 +100,7 @@
 
 .terminal, .cmd {
   font-family: FreeMono, monospace;
-  color: #aaa;
+  color: #ccc;
   background-color: #333;
   font-size: 14px;
   line-height: 14px;
@@ -121,14 +121,14 @@
 }
 
 .terminal .inverted, .cmd .inverted, .cmd .cursor.blink {
-  background-color: #aaa;
+  background-color: #ccc;
   color: #333;
 }
 
 .terminal .terminal-output div div::-moz-selection,
 .terminal .terminal-output div span::-moz-selection,
 .terminal .terminal-output div div a::-moz-selection {
-  background-color: #aaa;
+  background-color: #ccc;
   color: #333;
 }
 
@@ -137,7 +137,7 @@
 .terminal .terminal-output div span::selection,
 .cmd > span::selection,
 .cmd .prompt span::selection {
-  background-color: #aaa;
+  background-color: #ccc;
   color: #333;
 }
 
