--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,8 @@
 body {
   background-color: #333;
   color: white;
-  font-family: 'Inconsolata', sans-serif;
+  font-family: 'Inconsolata', monospace, fixed, sans-serif;
+  font-weight: 700;
   font-size: 12pt;
   margin: 0;
   width: 100%;
@@ -19,6 +20,7 @@ div#logo {
   color: white;
   text-align: center;
   font-family: 'Grand Hotel', cursive;
+  font-weight: 400;
 }
 
 div#terminal {
