--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <title>browserconsole</title>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=8"/>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
   <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/terminal.css'}">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Grand+Hotel|Inconsolata:400,700">
+  <link rel="stylesheet" href='//fonts.googleapis.com/css?family=Grand+Hotel|Inconsolata:700' type="text/css">
   <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
   <script src="@{'/public/javascripts/jquery-1.11.1.min.js'}" type="text/javascript" charset="UTF-8"></script>
   <script src="@{'/public/javascripts/jquery.mousewheel-min.js'}" type="text/javascript" charset="UTF-8"></script>
