--- a/app/views/HTML/index.html
+++ b/app/views/HTML/index.html
@@ -12,15 +12,26 @@
   <script src="@{'/public/javascripts/jquery.mousewheel-min.js'}" type="text/javascript" charset="UTF-8"></script>
   <script src="@{'/public/javascripts/jquery.terminal-0.4.22.js'}" type="text/javascript" charset="UTF-8"></script>
   <script src="@{'/public/javascripts/browserconsole.js'}" type="text/javascript" charset="UTF-8"></script>
+  <script src="@{'/public/javascripts/qrcode.min.js'}" type="text/javascript" charset="UTF-8"></script>
 </head>
 <body>
 <div id="container">
   <div id="logo">browserconsole</div>
   <div id="terminal"></div>
+  <div id="qrcode"></div>
+  <div id="qrexplain">(Link to this page)</div>
 </div>
 <script>
   $(function() {
     bconsole.init();
+    new QRCode("qrcode", {
+      text: "http://browserconsole.com/#" + bconsole.token,
+      width: 128,
+      height: 128,
+      colorDark : "#333",
+      colorLight : "#fff",
+      correctLevel : QRCode.CorrectLevel.H
+    });
   });
 </script>
 </body>
