--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -23,12 +23,40 @@ div#logo {
   font-weight: 400;
 }
 
+@media only screen and (max-width: 1200px) {
+  div#logo {
+    text-align: left;
+    padding-left: 15px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  div#logo {
+    font-size: 80pt;
+    text-align: left;
+    padding-left: 20px;
+  }
+}
+
 div#terminal {
-  height: 600px;
+  height: 540px;
   margin: 0 auto 0;
   padding: 15px;
 }
 
 .prompt {
   color: #af7dff;
+}
+
+#qrcode {
+  position: absolute;
+  right: 50px;
+  top: 50px;
+  border: 4px solid white;
+}
+
+#qrexplain {
+  position: absolute;
+  right: 40px;
+  top: 200px;
 }
